--- a/lang/en.json
+++ b/lang/en.json
@@ -638,6 +638,10 @@
 "DND5E.HitPointsOverride": "Maximum Hit Points Override",
 "DND5E.HitPointsTemp": "Temporary Hit Points",
 "DND5E.HitPointsTempMax": "Temporary Maximum Hit Points",
+"DND5E.ManaPoints": "Pts de Mana",
+"DND5E.ManaPointsConfig": "Config Mana",
+"DND5E.ManaPointsCurrent": "Points de mana actuels",
+"DND5E.ManaPointsMax": "Points de mana max",
 "DND5E.HP": "HP",
 "DND5E.HealthConditions": "Health Conditions",
 "DND5E.HPFormula": "Health Formula",
